--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/MicrosoftGraph Service/MicrosoftGraphPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/MicrosoftGraph Service/MicrosoftGraphPage.xaml
@@ -7,18 +7,32 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="{StaticResource Brush-Grey-05}" MaxWidth="800">
-        <Grid Margin="24" BorderThickness="1" BorderBrush="#FFCCCCCC" Background="{StaticResource Brush-Grey-04}" CornerRadius="4">
+    <Grid Background="{StaticResource Brush-Grey-05}" 
+          MaxWidth="800">
+        <Grid Margin="24" 
+              BorderThickness="1" 
+              BorderBrush="#FFCCCCCC" 
+              Background="{StaticResource Brush-Grey-04}"
+              CornerRadius="4">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"></RowDefinition>
                 <RowDefinition></RowDefinition>
             </Grid.RowDefinitions>
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <Image Height="100" Width="100" Stretch="Uniform" 
-                       Source="/SamplePages/MicrosoftGraph Service/OfficeLogo.png" Margin="24"/>
-                <Border CornerRadius="50" x:Name="ProfileImage" Height="100" Width="100" Visibility="Collapsed">
+            <StackPanel Orientation="Horizontal" 
+                        HorizontalAlignment="Center">
+                <Image Height="100" 
+                       Width="100" 
+                       Stretch="Uniform" 
+                       Source="/SamplePages/MicrosoftGraph Service/OfficeLogo.png" 
+                       Margin="24"/>
+                <Border CornerRadius="50" 
+                        x:Name="ProfileImage" 
+                        Height="100" 
+                        Width="100" 
+                        Visibility="Collapsed">
                     <Border.Background>
-                        <ImageBrush Stretch="Uniform" ImageSource="{Binding ProfileImageUrl}"/>
+                        <ImageBrush Stretch="Uniform" 
+                                    ImageSource="{Binding ProfileImageUrl}"/>
                     </Border.Background>
                 </Border>
             </StackPanel>
@@ -45,15 +59,38 @@
                               
                                 <ColumnDefinition />
                             </Grid.ColumnDefinitions>
-                          <Button x:Name="ClientIdExpandButton" FontFamily="Segoe MDL2 Assets" VerticalAlignment="Stretch" Content="" Click="ClientIdExpandButton_Click" />
-                            <TextBlock Grid.Column="1" Text="Azure Active Directory Configuration" HorizontalAlignment="Left" VerticalAlignment="Center" 
-                                       Margin="12,6" Foreground="{StaticResource Brush-Grey-01}" />
+                          <Button x:Name="ClientIdExpandButton" 
+                                  FontFamily="Segoe MDL2 Assets" 
+                                  VerticalAlignment="Stretch" 
+                                  Content="" 
+                                  Click="ClientIdExpandButton_Click" />
+                            <TextBlock Grid.Column="1" 
+                                       Text="Azure Active Directory Configuration" 
+                                       HorizontalAlignment="Left" 
+                                       VerticalAlignment="Center" 
+                                       Margin="12,6" 
+                                       Foreground="{StaticResource Brush-Grey-01}" />
                         </Grid>
 
-                        <StackPanel x:Name="ClientIdBox" Orientation="Vertical" Margin="24,24,24,21" Grid.Row="1">
-                            <TextBox Header="Client Id:" x:Name="ClientId" Margin="0,0,0,12"/>
-                            <Button Content="Sign in" x:Name="ConnectButton" Click="ConnectButton_Click" Margin="0,10,0,0" VerticalAlignment="Bottom" Width="75"></Button>
-                            <Button Content="Sign out" x:Name="LogOutButton" Click="LogOutButton_Click" Margin="0,10,0,0" VerticalAlignment="Bottom" Width="75"></Button>
+                        <StackPanel x:Name="ClientIdBox" 
+                                    Orientation="Vertical" 
+                                    Margin="24,24,24,21" 
+                                    Grid.Row="1">
+                            <TextBox Header="Client Id:" 
+                                     x:Name="ClientId" 
+                                     Margin="0,0,0,12"/>
+                            <Button Content="Sign in" 
+                                    x:Name="ConnectButton" 
+                                    Click="ConnectButton_Click" 
+                                    Margin="0,10,0,0" 
+                                    VerticalAlignment="Bottom" 
+                                    Width="75"></Button>
+                            <Button Content="Sign out" 
+                                    x:Name="LogOutButton" 
+                                    Click="LogOutButton_Click"
+                                    Margin="0,10,0,0" 
+                                    VerticalAlignment="Bottom" 
+                                    Width="75"></Button>
                         </StackPanel>
                         
                     </Grid>
@@ -69,19 +106,46 @@
                                 <ColumnDefinition Width="Auto"/>
                                 <ColumnDefinition />
                             </Grid.ColumnDefinitions>
-                            <Button x:Name="UserBoxExpandButton" FontFamily="Segoe MDL2 Assets" VerticalAlignment="Stretch" Content="" Click="UserBoxExpandButton_Click" />
-                            <TextBlock Grid.Column="1" Text="User" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="12,6" Foreground="{StaticResource Brush-Grey-01}" />
+                            <Button x:Name="UserBoxExpandButton" 
+                                    FontFamily="Segoe MDL2 Assets" 
+                                    VerticalAlignment="Stretch" 
+                                    Content="" 
+                                    Click="UserBoxExpandButton_Click" />
+                            <TextBlock Grid.Column="1" 
+                                       Text="User" 
+                                       HorizontalAlignment="Left" 
+                                       VerticalAlignment="Center" 
+                                       Margin="12,6" 
+                                       Foreground="{StaticResource Brush-Grey-01}" />
                         </Grid>
-                          <StackPanel x:Name="UserPanel"  Grid.Row="1" Margin="24">
-                            <Image x:Name="Photo" Width="50" Height="50" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-                            <TextBlock Text="{Binding DisplayName}" FontSize="20" FontWeight="Medium"/>
-                            <TextBlock Text="{Binding Mail}" FontSize="15" FontWeight="Normal"/>
-                            <TextBlock   Text="{Binding Department}" Opacity="0.6" FontSize="15" TextWrapping="NoWrap"                                   
+                          <StackPanel x:Name="UserPanel"  
+                                      Grid.Row="1" 
+                                      Margin="24">
+                            <Image x:Name="Photo" 
+                                   Width="50" 
+                                   Height="50" 
+                                   HorizontalAlignment="Left"
+                                   VerticalAlignment="Top"/>
+                            <TextBlock Text="{Binding DisplayName}" 
+                                       FontSize="20" 
+                                       FontWeight="Medium"/>
+                            <TextBlock Text="{Binding Mail}" 
+                                       FontSize="15" 
+                                       FontWeight="Normal"/>
+                            <TextBlock   Text="{Binding Department}" 
+                                         Opacity="0.6" 
+                                         FontSize="15" 
+                                         TextWrapping="NoWrap"                                   
                                      FontWeight="Normal"/>
-                            <TextBlock  Text="{Binding JobTitle}" Opacity="0.6" FontSize="15" TextWrapping="NoWrap"                                   
+                            <TextBlock  Text="{Binding JobTitle}" 
+                                        Opacity="0.6" 
+                                        FontSize="15" 
+                                        TextWrapping="NoWrap"                                   
                                      FontWeight="Normal"/>
-                            <TextBlock  Text="{Binding PreferredLanguage}" Opacity="0.6" FontSize="15" TextWrapping="NoWrap"                                   
-                                     FontWeight="Normal"/>
+                            <TextBlock  Text="{Binding PreferredLanguage}" 
+                                        Opacity="0.6" FontSize="15" 
+                                        TextWrapping="NoWrap"                                   
+                                        FontWeight="Normal"/>
                         </StackPanel>                        
                     </Grid>
                     <!-- Messages area -->
@@ -96,17 +160,42 @@
                                 <ColumnDefinition Width="Auto"/>
                                 <ColumnDefinition />
                             </Grid.ColumnDefinitions>
-                            <Button x:Name="MessageBoxExpandButton" FontFamily="Segoe MDL2 Assets" VerticalAlignment="Stretch" Content="" Click="MessageBoxExpandButton_Click" />
-                            <TextBlock Grid.Column="1" Text="Messages" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="12,6" Foreground="{StaticResource Brush-Grey-01}" />
+                            <Button x:Name="MessageBoxExpandButton" 
+                                    FontFamily="Segoe MDL2 Assets" 
+                                    VerticalAlignment="Stretch" 
+                                    Content="" 
+                                    Click="MessageBoxExpandButton_Click" />
+                            <TextBlock Grid.Column="1" 
+                                       Text="Messages" 
+                                       HorizontalAlignment="Left" 
+                                       VerticalAlignment="Center" 
+                                       Margin="12,6" 
+                                       Foreground="{StaticResource Brush-Grey-01}" />
                         </Grid>
 
                         <StackPanel Grid.Row="1" Margin="24" x:Name="MessagesPanel">
-                            <TextBox Header="#Messages by page:" x:Name="TopText" Margin="0,0,0,12" InputScope="Number"/>
-                            <Button Content="Get Messages" x:Name="GetMessagesButton"  Margin="0,10,0,0" Click="GetMessagesButton_Click" Width="148"></Button>
-                            <Button Content="Send Message" x:Name="SendMessageButton" Margin="0,20,0,0" Click="SendMessageButton_Click" Width="148"/>
+                            <TextBox Header="#Messages by page:" 
+                                     x:Name="TopText" 
+                                     Margin="0,0,0,12" 
+                                     InputScope="Number"/>
+                            <Button Content="Get Messages" 
+                                    x:Name="GetMessagesButton"  
+                                    Margin="0,10,0,0" 
+                                    Click="GetMessagesButton_Click" 
+                                    Width="148"></Button>
+                            <Button Content="Send Message" 
+                                    x:Name="SendMessageButton" 
+                                    Margin="0,20,0,0" 
+                                    Click="SendMessageButton_Click" 
+                                    Width="148"/>
                         </StackPanel>
                     </Grid>
-                    <ListView ItemsSource="{Binding}" x:Name="MessagesList" Grid.Row="3" IncrementalLoadingThreshold="1" IncrementalLoadingTrigger="Edge" Margin="10,0">
+                    <ListView ItemsSource="{Binding}" 
+                              x:Name="MessagesList" 
+                              Grid.Row="3" 
+                              IncrementalLoadingThreshold="1" 
+                              IncrementalLoadingTrigger="Edge" 
+                              Margin="10,0">
                         <ListView.ItemTemplate>
                             <DataTemplate>
                                 <Grid>
@@ -115,9 +204,17 @@
                                         <ColumnDefinition Width="48"/>
                                     </Grid.ColumnDefinitions>
                                     <StackPanel>
-                                        <TextBlock Text="{Binding From.EmailAddress.Name}" FontSize="15" FontWeight="Medium"/>
-                                        <TextBlock Text="{Binding Subject}" FontSize="10" FontWeight="Normal" Foreground="Blue"/>
-                                        <TextBlock Text="{Binding BodyPreview}" Opacity="0.6" FontSize="10" TextWrapping="NoWrap" FontWeight="Normal"/>
+                                        <TextBlock Text="{Binding From.EmailAddress.Name}" 
+                                                   FontSize="15"
+                                                   FontWeight="Medium"/>
+                                        <TextBlock Text="{Binding Subject}" 
+                                                   FontSize="10" 
+                                                   FontWeight="Normal" 
+                                                   Foreground="Blue"/>
+                                        <TextBlock Text="{Binding BodyPreview}" 
+                                                   Opacity="0.6" FontSize="10" 
+                                                   TextWrapping="NoWrap" 
+                                                   FontWeight="Normal"/>
                                     </StackPanel>
                                 </Grid>
                             </DataTemplate>
