Randomization logic simplified.
Min and Max random duration properties removed. ExtraRandomDuration
implemented.

--- a/Microsoft.Toolkit.Uwp.UI.Controls/RotatorTile/RotatorTile.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/RotatorTile/RotatorTile.xaml
@@ -31,7 +31,7 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-        <Setter Property="MinRandomDuration" Value="0:0:5" />
-        <Setter Property="MaxRandomDuration" Value="0:0:10" />
+        <Setter Property="RotationDelay" Value="0:0:3" />
+        <Setter Property="ExtraRandomDuration" Value="0:0:10" />
     </Style>
 </ResourceDictionary>
