PropertyGrid is now vertically scrollable.
Fixes #302

--- a/Microsoft.Toolkit.Uwp.SampleApp/Shell.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/Shell.xaml
@@ -131,14 +131,16 @@
                 </Grid>
                 <Pivot Grid.Row="1" HeaderTemplate="{StaticResource PivotHeaderTemplate}" x:Name="InfoAreaPivot" SelectionChanged="InfoAreaPivot_OnSelectionChanged">
                     <PivotItem Header="PROPERTIES" x:Name="PropertiesPivotItem">
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="*"/>
-                            </Grid.RowDefinitions>
-                            <controlsLocal:PropertyControl x:Name="Properties"/>
-                            <StackPanel Grid.Row="1" Orientation="Vertical" HorizontalAlignment="Stretch" x:Name="CommandArea"></StackPanel>
-                        </Grid>
+                        <ScrollViewer>
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="*"/>
+                                </Grid.RowDefinitions>
+                                <controlsLocal:PropertyControl x:Name="Properties"/>
+                                <StackPanel Grid.Row="1" Orientation="Vertical" HorizontalAlignment="Stretch" x:Name="CommandArea"></StackPanel>
+                            </Grid>
+                        </ScrollViewer>
                     </PivotItem>
 
                     <PivotItem Header="XAML" x:Name="XamlPivotItem">
