--- a/Microsoft.Toolkit.Uwp.SampleApp/Controls/PropertyControl.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/Controls/PropertyControl.xaml
@@ -10,5 +10,7 @@
     d:DesignHeight="300"
     d:DesignWidth="400">
 
-    <StackPanel x:Name="RootPanel" Padding="15,20,15,20" Background="{StaticResource AppBarBackgroundThemeBrush}" />
+    <StackPanel x:Name="RootPanel"
+                Padding="15,20,15,20"
+                Background="{StaticResource AppBarBackgroundThemeBrush}" />
 </UserControl>
