Added JS code tab (#301)

--- a/Microsoft.Toolkit.Uwp.SampleApp/Shell.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/Shell.xaml
@@ -150,6 +150,10 @@
                     <PivotItem Header="CODE" x:Name="CSharpPivotItem">
                         <controlsLocal:CodeRenderer x:Name="CSharpCodeRenderer" Grid.Row="0"></controlsLocal:CodeRenderer>
                     </PivotItem>
+
+                    <PivotItem Header="JAVASCRIPT" x:Name="JavaScriptPivotItem">
+                        <controlsLocal:CodeRenderer x:Name="JavaScriptCodeRenderer" Grid.Row="0"></controlsLocal:CodeRenderer>
+                    </PivotItem>
                 </Pivot>
             </Grid>
             <Grid x:Name="waitRing" Visibility="Collapsed" Grid.RowSpan="2" Grid.ColumnSpan="2">
