--- a/Microsoft.Toolkit.Uwp.UI.Controls/SlidableListItem/SlidableListItem.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/SlidableListItem/SlidableListItem.xaml
@@ -10,6 +10,7 @@
         <Setter Property="Background" Value="White"></Setter>
         <Setter Property="ActivationWidth" Value="80"></Setter>
         <Setter Property="IsOffsetLimited" Value="True"></Setter>
+        <Setter Property="ExtraSwipeThreshold" Value="24"></Setter>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="controls:SlidableListItem">
