--- a/Microsoft.Toolkit.Uwp.UI.Controls/HeaderedTextBlock/HeaderedTextBlock.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/HeaderedTextBlock/HeaderedTextBlock.xaml
@@ -11,7 +11,7 @@
         <Setter Property="TextWrapping" Value="Wrap" />
         <Setter Property="TextLineBounds" Value="TrimToBaseline" />
         <Setter Property="OpticalMarginAlignment" Value="TrimSideBearings" />
-        <Setter Property="FontSize" Value="{TemplateBinding FontSize}" />
+        <Setter Property="FontSize" Value="18" />
         <Setter Property="FontWeight" Value="Light" />
         <Setter Property="LineHeight" Value="28" />
     </Style>
@@ -42,8 +42,8 @@
                             </VisualStateGroup>
                         </VisualStateManager.VisualStateGroups>
 
-                        <TextBlock x:Name="HeaderContent" Text="{TemplateBinding Header}" Style="{TemplateBinding HeaderStyle}" FontSize="{TemplateBinding FontSize}"/>
-                        <TextBlock x:Name="TextContent" Text="{TemplateBinding Text}" Style="{TemplateBinding TextStyle}" FontSize="{TemplateBinding FontSize}"/>
+                        <TextBlock x:Name="HeaderContent" Text="{TemplateBinding Header}" Style="{TemplateBinding HeaderStyle}" FontSize="{TemplateBinding HeaderContentFontSize}"/>
+                        <TextBlock x:Name="TextContent" Text="{TemplateBinding Text}" Style="{TemplateBinding TextStyle}" FontSize="{TemplateBinding TextContentFontSize}"/>
                     </StackPanel>
                 </ControlTemplate>
             </Setter.Value>
