Adding color to grid splitter in sample page and adapte its parent level

--- a/Microsoft.Toolkit.Uwp.SampleApp/Shell.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/Shell.xaml
@@ -115,23 +115,13 @@
                 <RowDefinition/>
                 <RowDefinition Height="32"/>
             </Grid.RowDefinitions>
-            <Grid x:Name="DemoAreaGrid" Padding="5,0,11,0">
+            <Grid x:Name="DemoAreaGrid">
                 <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
                     <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="UWP Community Toolkit" Margin="0,24,0,0" FontSize="32" FontWeight="Light" Foreground="{StaticResource Brush-Grey-03}" TextWrapping="Wrap"/>
                     <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="Sample App" Margin="0" FontSize="18.667" FontWeight="Light" Foreground="{StaticResource Brush-Grey-03}"/>
                 </StackPanel>
                 <Frame x:Name="NavigationFrame" />
             </Grid>
-            <controls:GridSplitter
-                x:Name="Splitter"
-                Width="11"
-                Background="{StaticResource Brush-Grey-02}"
-                HorizontalAlignment="Right"
-                Grid.Column="0"
-                Grid.Row="0"
-                Grid.RowSpan="2"
-                GripperForeground="White">
-            </controls:GridSplitter>
             <Grid x:Name="InfoAreaGrid" Background="{StaticResource Brush-Grey-04}">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
@@ -171,6 +161,16 @@
                         <controlsLocal:CodeRenderer x:Name="JavaScriptCodeRenderer" Grid.Row="0"></controlsLocal:CodeRenderer>
                     </PivotItem>
                 </Pivot>
+
+                <controls:GridSplitter
+                    x:Name="Splitter"
+                    Width="11"
+                    Background="{StaticResource Brush-Grey-04}"
+                    HorizontalAlignment="Left"
+                    ParentLevel="1"
+                    Grid.Row="1"
+                    GripperForeground="White">
+                </controls:GridSplitter>
             </Grid>
             <Grid x:Name="waitRing" Visibility="Collapsed" Grid.RowSpan="2" Grid.ColumnSpan="2">
                 <Rectangle Fill="Black" Opacity="0.2"></Rectangle>
