--- a/Microsoft.Toolkit.Uwp.SampleApp/Pages/SamplePicker.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/Pages/SamplePicker.xaml
@@ -16,10 +16,19 @@
                 <Border Grid.Column="0" BorderThickness="1" BorderBrush="{StaticResource Brush-Grey-04}" VerticalAlignment="Top" Margin="0,0,12,0">
                     <Image Source="{Binding Icon}" Height="120" Width="120" />
                 </Border>
-                <StackPanel Grid.Column="1">
+                <Grid Grid.Column="1">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition></RowDefinition>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition Width="Auto"></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
                     <TextBlock Text="{x:Bind Name}" Foreground="{StaticResource Brush-Grey-03}" FontSize="24" VerticalAlignment="Top" FontWeight="Light" />
-                    <TextBlock Text="{x:Bind About}" Foreground="{StaticResource Brush-Grey-01}" FontSize="14" VerticalAlignment="Top" TextWrapping="Wrap" Margin="0,4,0,0" />
-                </StackPanel>
+                    <TextBlock Text="{x:Bind About}" Foreground="{StaticResource Brush-Grey-01}" FontSize="14" VerticalAlignment="Top" TextWrapping="Wrap" Margin="0,4,0,0" Grid.ColumnSpan="2" Grid.Row="1"/>
+                    <HyperlinkButton Grid.Row="0" Grid.Column="1" Content="github" NavigateUri="{x:Bind CodeUrl}" Foreground="{ThemeResource TextBoxPlaceholderTextThemeBrush}"></HyperlinkButton>
+                </Grid>
             </Grid>
         </DataTemplate>
         <DataTemplate x:Key="SmallSampleTemplate" x:DataType="sampleApp:Sample">
@@ -31,10 +40,19 @@
                 <Border Grid.Column="0" BorderThickness="1" BorderBrush="{StaticResource Brush-Grey-04}" VerticalAlignment="Center" Margin="0,0,6,0">
                     <Image Source="{Binding Icon}" Height="80" Width="80" />
                 </Border>
-                <StackPanel Grid.Column="1">
+                <Grid Grid.Column="1">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition></RowDefinition>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition Width="Auto"></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
                     <TextBlock Text="{x:Bind Name}" Foreground="{StaticResource Brush-Grey-03}" FontSize="16" VerticalAlignment="Top" FontWeight="Light" />
-                    <TextBlock Text="{x:Bind About}" Foreground="{StaticResource Brush-Grey-01}" FontSize="12" VerticalAlignment="Top" TextWrapping="Wrap" Margin="0,2,0,0" />
-                </StackPanel>
+                    <TextBlock Text="{x:Bind About}" Foreground="{StaticResource Brush-Grey-01}" FontSize="12" VerticalAlignment="Top" TextWrapping="Wrap" Margin="0,2,0,0" Grid.ColumnSpan="2" Grid.Row="1"/>
+                    <HyperlinkButton Grid.Row="0" Grid.Column="1" Content="github" NavigateUri="{x:Bind CodeUrl}" Foreground="{ThemeResource TextBoxPlaceholderTextThemeBrush}" Margin="0,0,5,0"></HyperlinkButton>
+                </Grid>
             </Grid>
         </DataTemplate>
     </Page.Resources>
