--- a/Microsoft.Toolkit.Uwp.UI.Controls/HeaderedTextBlock/HeaderedTextBlock.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/HeaderedTextBlock/HeaderedTextBlock.xaml
@@ -11,6 +11,7 @@
         <Setter Property="TextWrapping" Value="Wrap" />
         <Setter Property="TextLineBounds" Value="TrimToBaseline" />
         <Setter Property="OpticalMarginAlignment" Value="TrimSideBearings" />
+        <Setter Property="FontSize" Value="18" />
         <Setter Property="FontWeight" Value="Light" />
         <Setter Property="LineHeight" Value="28" />
     </Style>
@@ -23,6 +24,8 @@
     <Style TargetType="controls:HeaderedTextBlock">
         <Setter Property="HorizontalAlignment" Value="Left" />
         <Setter Property="Orientation" Value="Vertical" />
+        <Setter Property="HeaderFontSize" Value="18" />
+        <Setter Property="TextFontSize" Value="18" />
         <Setter Property="HeaderStyle" Value="{ThemeResource HeaderedTextBlockHeaderStyle}" />
         <Setter Property="TextStyle" Value="{ThemeResource HeaderedTextBlockTextStyle}" />
         <Setter Property="Template">
@@ -40,9 +43,8 @@
                                 </VisualState>
                             </VisualStateGroup>
                         </VisualStateManager.VisualStateGroups>
-
-                        <TextBlock x:Name="HeaderContent" Text="{TemplateBinding Header}" Style="{TemplateBinding HeaderStyle}" FontSize="{TemplateBinding HeaderContentFontSize}"/>
-                        <TextBlock x:Name="TextContent" Text="{TemplateBinding Text}" Style="{TemplateBinding TextStyle}" FontSize="{TemplateBinding TextContentFontSize}"/>
+                        <TextBlock x:Name="HeaderContent" Text="{TemplateBinding Header}" Style="{TemplateBinding HeaderStyle}" FontSize="{Binding HeaderFontSize,Mode=OneWay,RelativeSource={RelativeSource Mode=TemplatedParent}}"/>
+                        <TextBlock x:Name="TextContent" Text="{TemplateBinding Text}" Style="{TemplateBinding TextStyle}" FontSize="{Binding TextFontSize,Mode=OneWay,RelativeSource={RelativeSource Mode=TemplatedParent}}"/>
                     </StackPanel>
                 </ControlTemplate>
             </Setter.Value>
