--- a/Microsoft.Toolkit.Uwp.UI.Controls/AdaptiveGridView/AdaptiveGridView.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/AdaptiveGridView/AdaptiveGridView.xaml
@@ -7,7 +7,11 @@
             <Setter.Value>
 				<ControlTemplate TargetType="controls:AdaptiveGridView">
                     <Grid>
-						<ContentPresenter x:Name="templateProxy" Width="{TemplateBinding ItemWidth}" Height="{TemplateBinding ItemHeight}" ContentTemplate="{TemplateBinding ItemTemplate}" Visibility="Collapsed" />
+						<ContentPresenter x:Name="TemplateProxy" 
+                                          Width="{TemplateBinding ItemWidth}" 
+                                          Height="{TemplateBinding ItemHeight}" 
+                                          ContentTemplate="{TemplateBinding ItemTemplate}" 
+                                          Visibility="Collapsed" />
 
                         <GridView HorizontalAlignment="Stretch" x:Name="ListView"
                                   IsItemClickEnabled="{TemplateBinding IsItemClickEnabled}"
@@ -20,7 +24,9 @@
 
                             <GridView.ItemTemplate>
                                 <DataTemplate>
-									<ContentPresenter Width="{Binding Width, ElementName=templateProxy}" Height="{Binding Height, ElementName=templateProxy}" ContentTemplate="{Binding ContentTemplate, ElementName=templateProxy}" />
+                                    <ContentPresenter Width="{Binding Width, ElementName=TemplateProxy}" 
+                                                      Height="{Binding Height, ElementName=TemplateProxy}" 
+                                                      ContentTemplate="{Binding ContentTemplate, ElementName=TemplateProxy}" />
 								</DataTemplate>
                             </GridView.ItemTemplate>
                         </GridView> 
