--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/BladeControl/BladePage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/BladeControl/BladePage.xaml
@@ -7,43 +7,41 @@
       mc:Ignorable="d">
 
     <Grid Background="{StaticResource Brush-Grey-05}">
-        <controls:BladeControl Margin="12"
+        <controls:BladeControl Padding="24"
                                HorizontalAlignment="Stretch"
                                VerticalAlignment="Stretch">
             <controls:BladeControl.Blades>
                 <controls:Blade Title="Test"
                                 IsOpen="True"
-                                TitleBarVisibility="Collapsed">
+                                TitleBarVisibility="Collapsed"
+                                Background="{StaticResource Brush-White}"
+                                BorderBrush="{StaticResource Brush-Grey-04}">
                     <controls:Blade.Element>
-                        <StackPanel Margin="8">
-                            <TextBlock Style="{StaticResource SubtitleTextBlockStyle}" Text="This first blade has a hidden TitleBar, so you can't close it." />
-                            <TextBlock Style="{StaticResource SubtitleTextBlockStyle}" Text="The buttons below toggle more blades on and off. The blades appear in the order that they're opened." />
-                            <Button Width="180"
-                                    Height="100"
-                                    Margin="0, 20, 0, 0"
+                        <StackPanel Margin="24">
+                            <TextBlock TextWrapping="WrapWholeWords" Text="This first blade has a hidden TitleBar, so you can't close it." />
+                            <TextBlock TextWrapping="WrapWholeWords" Margin="0,12,0,0" Text="The buttons below toggle more blades on and off. The blades appear in the order that they're opened." />
+                            <Button Margin="0, 24, 0, 0"
                                     controls:BladeControl.ToggleBlade="BladeTest1"
-                                    Content="Default blade" />
-                            <Button Width="180"
-                                    Height="100"
-                                    Margin="0, 20, 0, 0"
+                                    Content="Create a default blade" />
+                            <Button Margin="0, 24, 0, 0"
                                     controls:BladeControl.ToggleBlade="BladeTest2"
-                                    Content="Custom titlebar" />
-                            <Button Width="180"
-                                    Height="100"
-                                    Margin="0, 20, 0, 0"
+                                    Content="Create a blade with a custom titlebar" />
+                            <Button Margin="0, 24, 0, 0"
                                     controls:BladeControl.ToggleBlade="BladeTest3"
-                                    Content="Custom close button" />
+                                    Content="Create a blade with a custom close button" />
                         </StackPanel>
                     </controls:Blade.Element>
                 </controls:Blade>
 
                 <controls:Blade Title="Default blade"
                                 BladeId="BladeTest1"
-                                IsOpen="False">
+                                IsOpen="False"
+                                Background="{StaticResource Brush-White}"
+                                BorderBrush="{StaticResource Brush-Grey-04}">
                     <controls:Blade.Element>
                         <TextBlock HorizontalAlignment="Center"
                                    VerticalAlignment="Center"
-                                   Style="{StaticResource SubtitleTextBlockStyle}"
+                                   Margin="24"
                                    Text="This is a blade with all settings set to default." />
                     </controls:Blade.Element>
                 </controls:Blade>
@@ -51,25 +49,30 @@
                 <controls:Blade Title="Custom title bar"
                                 BladeId="BladeTest2"
                                 IsOpen="False"
-                                TitleBarBackground="CornflowerBlue"
-                                TitleBarForeground="White">
+                                TitleBarBackground="{StaticResource Brush-Blue-01}"
+                                TitleBarForeground="{StaticResource Brush-White}"
+                                CloseButtonForeground="{StaticResource Brush-White}"
+                                Background="{StaticResource Brush-White}"
+                                BorderBrush="{StaticResource Brush-Grey-04}">
                     <controls:Blade.Element>
                         <TextBlock HorizontalAlignment="Center"
                                    VerticalAlignment="Center"
-                                   Style="{StaticResource SubtitleTextBlockStyle}"
+                                   Margin="24"
                                    Text="This is a blade with custom titlebar colors." />
                     </controls:Blade.Element>
                 </controls:Blade>
 
                 <controls:Blade Title="Custom close button color"
                                 BladeId="BladeTest3"
-                                CloseButtonBackground="Black"
-                                CloseButtonForeground="White"
+                                CloseButtonBackground="{StaticResource Brush-Grey-01}"
+                                CloseButtonForeground="{StaticResource Brush-White}"
+                                Background="{StaticResource Brush-White}"
+                                BorderBrush="{StaticResource Brush-Grey-04}"
                                 IsOpen="False">
                     <controls:Blade.Element>
                         <TextBlock HorizontalAlignment="Center"
                                    VerticalAlignment="Center"
-                                   Style="{StaticResource SubtitleTextBlockStyle}"
+                                   Margin="24"
                                    Text="This is a blade with a custom close button color." />
                     </controls:Blade.Element>
                 </controls:Blade>
