--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Incremental Loading Collection/IncrementalLoadingCollectionPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Incremental Loading Collection/IncrementalLoadingCollectionPage.xaml
@@ -19,7 +19,8 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <TextBlock Text="Items are loaded incrementally when the view needs to show them (i.e., when the user scrolls the ListView)" />
+        <TextBlock Text="Items are loaded incrementally when the view needs to show them (i.e., when the user scrolls the ListView)" 
+                   TextWrapping="Wrap"/>
         <StackPanel Grid.Row="1" Orientation="Horizontal">
             <TextBlock Text="{Binding IsLoading, Converter={StaticResource StringFormatConverter}, ConverterParameter='Is Loading: {0}'}" />
             <TextBlock Margin="20,0,0,0" Text="{Binding HasMoreItems, Converter={StaticResource StringFormatConverter}, ConverterParameter='Has More Items: {0}'}" />
