--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/BladeControl/BladePage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/BladeControl/BladePage.xaml
@@ -7,11 +7,39 @@
       mc:Ignorable="d">
 
     <Grid Background="{StaticResource Brush-Grey-05}">
-        <controls:BladeControl Padding="24"
+        <VisualStateManager.VisualStateGroups>
+            <VisualStateGroup>
+                <VisualState x:Name="Full">
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="600" />
+                    </VisualState.StateTriggers>
+                </VisualState>
+                <VisualState x:Name="Small">
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="0" />
+                    </VisualState.StateTriggers>
+
+                    <VisualState.Setters>
+                        <Setter Target="BladeControl.Padding" Value="12" />
+                        <Setter Target="FirstBlade.Width" Value="280" />
+                        <Setter Target="FirstBlade.FontSize" Value="12" />
+                        <Setter Target="SecondBlade.Width" Value="280" />
+                        <Setter Target="SecondBlade.FontSize" Value="12" />
+                        <Setter Target="ThirdBlade.Width" Value="280" />
+                        <Setter Target="ThirdBlade.FontSize" Value="12" />
+                        <Setter Target="FourthBlade.Width" Value="280" />
+                        <Setter Target="FourthBlade.FontSize" Value="12" />
+                    </VisualState.Setters>
+                </VisualState>
+            </VisualStateGroup>
+        </VisualStateManager.VisualStateGroups>
+        <controls:BladeControl x:Name="BladeControl"
+                               Padding="24"
                                HorizontalAlignment="Stretch"
                                VerticalAlignment="Stretch">
             <controls:BladeControl.Blades>
-                <controls:Blade Title="Test"
+                <controls:Blade x:Name="FirstBlade"
+                                Title="Test"
                                 IsOpen="True"
                                 TitleBarVisibility="Collapsed"
                                 Background="{StaticResource Brush-White}"
@@ -22,18 +50,19 @@
                             <TextBlock TextWrapping="WrapWholeWords" Margin="0,12,0,0" Text="The buttons below toggle more blades on and off. The blades appear in the order that they're opened." />
                             <Button Margin="0, 24, 0, 0"
                                     controls:BladeControl.ToggleBlade="BladeTest1"
-                                    Content="Create a default blade" />
+                                    Content="Default blade" />
                             <Button Margin="0, 24, 0, 0"
                                     controls:BladeControl.ToggleBlade="BladeTest2"
-                                    Content="Create a blade with a custom titlebar" />
+                                    Content="Custom titlebar" />
                             <Button Margin="0, 24, 0, 0"
                                     controls:BladeControl.ToggleBlade="BladeTest3"
-                                    Content="Create a blade with a custom close button" />
+                                    Content="Custom close button" />
                         </StackPanel>
                     </controls:Blade.Element>
                 </controls:Blade>
 
                 <controls:Blade Title="Default blade"
+                                x:Name="SecondBlade"
                                 BladeId="BladeTest1"
                                 IsOpen="False"
                                 Background="{StaticResource Brush-White}"
@@ -47,6 +76,7 @@
                 </controls:Blade>
 
                 <controls:Blade Title="Custom title bar"
+                                x:Name="ThirdBlade"
                                 BladeId="BladeTest2"
                                 IsOpen="False"
                                 TitleBarBackground="{StaticResource Brush-Blue-01}"
@@ -63,6 +93,7 @@
                 </controls:Blade>
 
                 <controls:Blade Title="Custom close button color"
+                                x:Name="FourthBlade"
                                 BladeId="BladeTest3"
                                 CloseButtonBackground="{StaticResource Brush-Grey-01}"
                                 CloseButtonForeground="{StaticResource Brush-White}"
