Changes from an opacity animation to a clip animation on commands when swiping is completed.

--- a/Microsoft.Toolkit.Uwp.UI.Controls/SlidableListItem/SlidableListItem.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/SlidableListItem/SlidableListItem.xaml
@@ -16,6 +16,10 @@
                 <ControlTemplate TargetType="controls:SlidableListItem">
                     <Grid>
                         <Grid x:Name="CommandContainer" Margin="1" x:DeferLoadStrategy="Lazy">
+                            <Grid.RenderTransform>
+                                <CompositeTransform></CompositeTransform>
+                            </Grid.RenderTransform>
+
                             <StackPanel x:Name="LeftCommandPanel" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Left">
                                 <SymbolIcon Symbol="{TemplateBinding LeftIcon}" Foreground="{TemplateBinding LeftForeground}"></SymbolIcon>
                                 <TextBlock FontSize="15" Margin="10,0,0,0" Text="{TemplateBinding LeftLabel}" Foreground="{TemplateBinding LeftForeground}"></TextBlock>
